tests/parser/function-var-shadows-param-error.stderr
error: variable 'x' shadows function parameter of the same name
 --> $DIR/function-var-shadows-param-error.lox:1:11
  |
1 | fn f(x) { var x; }
  |           ^^^^^^
