tests/parser/function-var-shadows-param-error.lox
fn f(x) { var x; }
